crates/analyzer/tests/snapshots/errors__ctx_undefined_create2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `create2` expects 3 arguments, but 2 were provided
  ┌─ compile_errors/ctx_undefined_create2.fe:5:13
  │
5 │         Bar.create2(0, 0)
  │             ^^^^^^^ -  - supplied 2 arguments
  │             │           
  │             expects 3 arguments

error: incorrect type for argument to `Bar.create2`
  ┌─ compile_errors/ctx_undefined_create2.fe:5:21
  │
5 │         Bar.create2(0, 0)
  │                     ^ this has type `u256`; expected `mut Context`


